--- a/.env
+++ b/.env
@@ -13,8 +13,16 @@ HIVE_METASTORE_DB_PASSWORD=password
 HIVE_VERSION=2.3.1
 HADOOP_VERSION=2.10.1
 
+# superset
+# generate with `openssl rand -base64 25`
+SUPERSET_SECRET_KEY="7KIOKTLEjo4cQvTlugaHnfxpT+jypEZUUQ=="
+SUPERSET_BACKEND_DB_USER=superset
+SUPERSET_BACKEND_DB_PASSWORD=password
+SUPERSET_BACKEND_DB_NAME=superset
+
 # networks
 INTERNAL_SUBNET=172.16.0.0/24
 HIVE_METASTORE_DB_IP=172.16.0.155
 HIVE_SERVER_IP=172.16.0.154
 TRINO_EVENT_DB_IP=172.16.0.153
+SUPERSET_BACKEND_DB_IP=172.16.0.152
