--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ HIVE_VERSION=2.3.1
 HADOOP_VERSION=2.10.1
 
 # superset
-# generate with `openssl rand -base64 25`
+# generate new secret `openssl rand -base64 25`
 SUPERSET_SECRET_KEY="7KIOKTLEjo4cQvTlugaHnfxpT+jypEZUUQ=="
 SUPERSET_BACKEND_DB_USER=superset
 SUPERSET_BACKEND_DB_PASSWORD=password
