--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   hive-metastore-db:
     container_name: hive-metastore-db
@@ -77,21 +75,21 @@ services:
       dockerfile: Dockerfile
     ports:
       - '8080:8080'
-      - '9080:9080'
-      - '9081:9081'
-      - '12345:12345'
+      # - '9080:9080'
+      # - '9081:9081'
+      # - '12345:12345'
     volumes:
       - ${PWD}/trino/coordinator/config.properties:/etc/trino/config.properties
-      - ${PWD}/trino/coordinator/jvm.config:/etc/trino/jvm.config
-      - ${PWD}/trino/coordinator/jmx-config.yaml:/etc/trino/jmx/config.yaml
-      - ${PWD}/trino/coordinator/mysql-event-listener.properties:/etc/trino/mysql-event-listener.properties
+      # - ${PWD}/trino/coordinator/jvm.config:/etc/trino/jvm.config
+      # - ${PWD}/trino/coordinator/jmx-config.yaml:/etc/trino/jmx/config.yaml
+      # - ${PWD}/trino/coordinator/mysql-event-listener.properties:/etc/trino/mysql-event-listener.properties
       - ${PWD}/secrets/gcp-sa.json:/opt/gcp/secrets/service-account.json
-      - ${PWD}/trino/catalog:/etc/trino/catalog
-      - ${PWD}/trino/common/exchange-manager.properties:/etc/trino/exchange-manager.properties
-    restart: always
+      - ${PWD}/trino/catalog/iceberg.properties:/etc/trino/catalog/iceberg.properties
+      # - ${PWD}/trino/common/exchange-manager.properties:/etc/trino/exchange-manager.properties
+    # restart: always
     depends_on:
-      trino-event-db:
-        condition: service_healthy
+      # trino-event-db:
+        # condition: service_healthy
       hive-server:
         condition: service_healthy
     networks:
@@ -110,14 +108,14 @@ services:
     volumes:
       - ${PWD}/trino/worker/config.properties:/etc/trino/config.properties
       - ${PWD}/secrets/gcp-sa.json:/opt/gcp/secrets/service-account.json
-      - ${PWD}/trino/catalog:/etc/trino/catalog
-      - ${PWD}/trino/common/exchange-manager.properties:/etc/trino/exchange-manager.properties
+      - ${PWD}/trino/catalog/iceberg.properties:/etc/trino/catalog/iceberg.properties
+      # - ${PWD}/trino/common/exchange-manager.properties:/etc/trino/exchange-manager.properties
     depends_on:
-      trino-event-db:
+      # trino-event-db:
+      #   condition: service_healthy
+      trino-coordinator:
         condition: service_healthy
-      hive-server:
-        condition: service_healthy
-    restart: always
+    # restart: always
     deploy:
       replicas: 1
     networks:
