--- a/trino/catalog/iceberg.properties
+++ b/trino/catalog/iceberg.properties
@@ -7,3 +7,11 @@ iceberg.file-format=PARQUET
 fs.native-gcs.enabled=true
 gcs.project-id=pwa-demo-nil1729
 gcs.json-key-file-path=/opt/gcp/secrets/service-account.json
+
+# file system cache
+fs.cache.enabled=true
+fs.cache.directories=/tmp/trino-cache/1/iceberg,/tmp/trino-cache/2/iceberg
+fs.cache.max-sizes=1GB,1GB
+
+# to sync external table from storage
+iceberg.register-table-procedure.enabled=true
