update docker compose with ghcr images

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# trino
+TRINO_VERSION=440
+TRINO_IMAGE=ghcr.io/nil1729/trino-hive-demo:trino-master
 TRINO_EVENT_DB_ROOT_PASSWORD=root-password
 TRINO_EVENT_DB_NAME=events
 TRINO_EVENT_DB_USER=trino
@@ -10,11 +13,13 @@ HIVE_METASTORE_DB_USER=hive
 HIVE_METASTORE_DB_PASSWORD=password
 
 # hive server
+HIVE_IMAGE=ghcr.io/nil1729/trino-hive-demo:hive-master
 HIVE_VERSION=4.0.0
 HADOOP_VERSION=3.3.6
 
 # superset
 # generate new secret `openssl rand -base64 25`
+SUPERSET_IMAGE=ghcr.io/nil1729/trino-hive-demo:superset-master
 SUPERSET_SECRET_KEY="7KIOKTLEjo4cQvTlugaHnfxpT+jypEZUUQ=="
 SUPERSET_BACKEND_DB_USER=superset
 SUPERSET_BACKEND_DB_PASSWORD=password
