--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -3,11 +3,9 @@ name: helm
 description: A Helm chart for Kubernetes
 type: application
 version: 0.0.1
-appVersion: "1.0.0"
+appVersion: "alpha"
 dependencies:
-  - name: helm1
-    repository: file://charts/helm1
-    condition: helm1.enabled
-  - name: helm2
-    repository: file://charts/helm2
-    condition: helm2.enabled
+  - name: trino
+    version: 0.28.0
+    repository: file://charts/trino
+    condition: trino.enabled
