--- a/helm/charts/trino/templates/serviceaccount.yaml
+++ b/helm/charts/trino/templates/serviceaccount.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "helm1.serviceAccountName" . }}
+  name: {{ include "trino.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "helm1.labels" . | nindent 4 }}
+    {{- include "trino.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
 {{- end }}
