--- a/helm/charts/hive/templates/serviceaccount.yaml
+++ b/helm/charts/hive/templates/serviceaccount.yaml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: {{ include "hive.serviceAccountName" . }}
   labels:
     {{- include "hive.labels" . | nindent 4 }}
