--- a/helm/charts/hive/templates/ingress.yaml
+++ b/helm/charts/hive/templates/ingress.yaml
@@ -15,6 +15,7 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: {{ $fullName }}
   labels:
     {{- include "hive.labels" . | nindent 4 }}
