--- a/helm/charts/hive/templates/service.yaml
+++ b/helm/charts/hive/templates/service.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: {{ include "hive.fullname" . }}
   labels:
     {{- include "hive.labels" . | nindent 4 }}
@@ -8,8 +9,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+      targetPort: {{ .Values.service.targetPort }}
+      protocol: {{ .Values.service.protocol }}
+      name: {{ .Values.service.name }}
   selector:
     {{- include "hive.selectorLabels" . | nindent 4 }}
