--- a/hive/Dockerfile
+++ b/hive/Dockerfile
@@ -12,4 +12,7 @@ RUN wget -P /opt/hive/lib \
 RUN wget -P /opt/hadoop/share/hadoop/tools/lib \ 
     "https://storage.googleapis.com/hadoop-lib/gcs/gcs-connector-hadoop2-latest.jar"
 
+COPY ./docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
+
 USER hive
