--- a/helm/templates/externalsecret.yaml
+++ b/helm/templates/externalsecret.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: {{ .Values.externalSecrets.target.name }}
+  name: {{ .Values.externalSecrets.name | default "external-secrets"  }}
   namespace: {{ .Release.Namespace }}
 spec:
   refreshInterval: {{ .Values.externalSecrets.refreshInterval | default "1h" }}
@@ -10,7 +10,7 @@ spec:
     kind: {{ .Values.externalSecrets.secretStoreRef.kind }}
     name: {{ .Values.externalSecrets.secretStoreRef.name }}
   target:
-    name: {{ .Values.externalSecrets.target.name }}
+    name: {{ .Values.externalSecrets.target.name | default "secrets" }}
     creationPolicy: {{ .Values.externalSecrets.target.creationPolicy | default "Owner" }}
   data:
   {{- range .Values.externalSecrets.data.secretRef }}
