--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -26,7 +26,7 @@ tls:
       key: trino-tls-key
 
 hive:
-  enabled: false
+  enabled: true
   replicaCount: 1
   image:
     repository: ghcr.io/nil1729/trino-hive-demo
